--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,3 +60,14 @@ footer div{
 footer a{
     color: #024e76;
 }
+section{
+    padding: 60px;
+}
+/* Hero Style Start */
+.hero{
+    background-image: url("../images/hero-bg.jpg");
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+}
+/* Hero Style End */
