--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,27 +126,25 @@ h3{
     padding: 10px 20px;
     font-size: 16px;
 }
-.intro{
-    text-align: center;
-}
 .intro p{
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 .steps{
-    text-align: center;
     background: #fce138;
 }
 .section-title{
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 .primary-border{
     border-color: #fce138;
@@ -174,7 +172,6 @@ h3{
     font-size: 38px;
 }
 .trainers{
-    text-align: center;
 }
 .trainer{
     width: 900px;
@@ -191,13 +188,6 @@ h3{
     padding: 35px;
     float: left;
     width: 65%;
-}
-/* Utility classes */
-.text-left{
-    text-align: left;
-}
-.text-right{
-    text-align: right;
 }
 /* Aligns and formats text */
 .trainer-bio h3{
@@ -218,7 +208,6 @@ h3{
 }
 /* Reach out starts */
 .contact{
-    text-align: center;
     background: #024e76;
 }
 .contact h2{
@@ -250,3 +239,13 @@ h3{
     color: #fce138;
 }
 /* reach out style end */
+/* Utility classes */
+.text-left{
+    text-align: left;
+}
+.text-right{
+    text-align: right;
+}
+.flex-row{
+    display: flex;
+}
