--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,13 +17,21 @@ header{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: 80%;
+    background-attachment: fixed;
 }
 /* Styling <h1> and <a> elements */
 header h1{
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
-    margin: 0;    
+    margin: 0;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);    
 }
 header a{
     text-decoration: none;
@@ -44,6 +52,13 @@ header nav ul li a{
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+header nav ul li a:hover{
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
 }
 /* Changes the layout and style of footer */
 footer{
@@ -73,11 +88,13 @@ section{
 .hero{
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: 80%;
+    /* Flex breaks element and children into box elements that move indepedant to the parent element but within parent */
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
 }
 .hero-cta{
     width: 35%;
@@ -91,14 +108,21 @@ section{
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    /* text shadow */
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 .hero-form{
     color: #024e76;
-    background-color: #fce138;
+    /* form background color with opacity - must be in rgba */
+    background-color: rgba(252, 225, 56, 0.8);
     padding: 20px;
     border: solid 3px #024e76;
     width: 40%;
     margin: 3.5%;
+    /* box shadow */
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    /* rounded corners */
+    border-radius: 15px;
 }
 /* Hero Style End */
 h3{
@@ -116,6 +140,12 @@ h3{
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+.form-input:focus{
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 .hero-form label{
     margin: 0 5px;
@@ -126,6 +156,10 @@ h3{
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
+}
+.hero-form button:hover{
+    background-color: #39a6b2;
 }
 .intro p{
     line-height: 1.7;
@@ -157,11 +191,13 @@ h3{
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+}
+.step:not(:last-child){
+    border-bottom: 1px solid #39a6b2;
 }
 .step h3{
     color: #024e76;
@@ -253,6 +289,12 @@ h3{
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+.contact-form input:focus, .contact-form textarea:focus{
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 .contact-form button{
     width: 100%;
@@ -262,6 +304,11 @@ h3{
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
+}
+.contact-form button:hover{
+    color: #fce138;
+    background: #39a6b2;
 }
 .contact-info div{
 
@@ -296,6 +343,7 @@ h3{
     header{
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
     }
     header h1{
         width: 100%;
